# macolima

./:    .gitignore  .trivyignore.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  claude_internal_audit.md  docker-compose.therapod.yml  docker-compose.yml  init_notes.md  justfile  macolima_audit_threapod.md  macolima_therapod_audit_sh.json  seccomp.json
config/: .p10k.zsh  .zshrc  claude-settings.json  db.env.template  zshrc-snippet.sh
config/hooks/: deny-destructive.sh  deny-destructive.test.sh
config/skills/audit-sandbox/: SKILL.md
dashboard/: README.md  pyproject.toml
dashboard/src/: app.py
dashboard/src/pages/: 04_proxy_allowlist.py
devcontainer-template/: devcontainer.json
docs/: add-gemini-plan.md  compose-network-ipam.md  control-dashboard-plan.md  database-internals.md  debug-recipes.md  deny-destructive-hook-plan.md  index.md  key-files.html  local-wheels.md  numerai-profile-seed.md  overlay-project-plan.md  permissions-model.md  porting-notes.md  sandbox-design-notes.md  squid-internals.md  therapod-profile-seed.md  virtiofs-gotchas.md  vscode-leakage.md
docs/_future/: overlay-project-plan.md
proxy/: allowed_domains.txt  squid.conf  wearables_allowed_domains.txt
scripts/: attach.sh  auth.sh  bootstrap.sh  colima-up.sh  profile.sh  run-ephemeral.sh  setup.sh  stage-audit-package.sh  start.sh  stop.sh  trivy-scan.sh  verify-sandbox.sh  with-egress.sh
scripts/audit/: README.md  aggregate.py  audit.sh
scripts/audit/probes/: env.py  fs.py  identity.py  network.py  proxy.py  seccomp_runtime.py  seccomp_static.py  settings.py
